--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.7.9",
     "flatpickr": "^4.6.13",
     "vue": "^3.5.13",
+    "vue-flatpickr-component": "^11.0.5",
     "vue-router": "^4.5.0",
     "vuetify": "^3.7.6"
   },
