--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^1.7.9",
     "flatpickr": "^4.6.13",
+    "microcms-js-sdk": "^3.1.2",
     "vue": "^3.5.13",
     "vue-flatpickr-component": "^11.0.5",
     "vue-router": "^4.5.0",
