--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@vuepic/vue-datepicker": "^11.0.1",
     "axios": "^1.7.9",
     "flatpickr": "^4.6.13",
     "microcms-js-sdk": "^3.1.2",
