--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.14.0",
+    "@vite-pwa/assets-generator": "^0.2.6",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/eslint-config-prettier": "^10.1.0",
     "eslint": "^9.14.0",
     "eslint-plugin-vue": "^9.30.0",
     "prettier": "^3.3.3",
     "vite": "^6.0.1",
+    "vite-plugin-pwa": "^0.21.1",
     "vite-plugin-vue-devtools": "^7.6.5"
   }
 }
