--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@vuepic/vue-datepicker": "^11.0.1",
     "axios": "^1.7.9",
+    "dayjs": "^1.11.13",
     "flatpickr": "^4.6.13",
     "microcms-js-sdk": "^3.1.2",
     "nuxt": "^3.16.0",
