--- a/package.json
+++ b/package.json
@@ -1,35 +1,31 @@
 {
-  "name": "rms",
+  "name": "rms-nuxt",
   "version": "0.0.0",
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "lint": "eslint . --fix",
-    "format": "prettier --write src/"
+    "build": "nuxt build",
+    "dev": "nuxt dev",
+    "generate": "nuxt generate",
+    "preview": "nuxt preview",
+    "postinstall": "nuxt prepare"
   },
   "dependencies": {
     "@vuepic/vue-datepicker": "^11.0.1",
     "axios": "^1.7.9",
     "flatpickr": "^4.6.13",
     "microcms-js-sdk": "^3.1.2",
+    "nuxt": "^3.16.0",
     "vue": "^3.5.13",
-    "vue-flatpickr-component": "^11.0.5",
-    "vue-router": "^4.5.0",
-    "vuetify": "^3.7.6"
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.14.0",
-    "@vite-pwa/assets-generator": "^0.2.6",
-    "@vitejs/plugin-vue": "^5.2.1",
+    "@nuxt/devtools": "^2.3.0",
+    "@vite-pwa/nuxt": "^0.10.6",
     "@vue/eslint-config-prettier": "^10.1.0",
     "eslint": "^9.14.0",
     "eslint-plugin-vue": "^9.30.0",
-    "prettier": "^3.3.3",
-    "vite": "^6.0.1",
-    "vite-plugin-pwa": "^0.21.1",
-    "vite-plugin-vue-devtools": "^7.6.5"
+    "prettier": "^3.3.3"
   }
 }
