--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@vuepic/vue-datepicker": "^11.0.1",
     "axios": "^1.7.9",
     "firebase": "^11.6.0",
+    "firebase-admin": "^13.3.0",
     "flatpickr": "^4.6.13",
     "microcms-js-sdk": "^3.1.2",
     "nuxt": "^3.16.0",
